--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -184,6 +184,8 @@
 	<p class="topic">Topic: Happiness</p></div>
 	<p style="text-align:center">Jack Hyles</p>
 	</div><br>
+		
+		<!-- Google Ads --><div style="width:100%; max-width:700px; margin:auto"><div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div></div>
 	
 	<br><div class="quote">
 	<p><span style="color:#8c8c8c">&#10077;</span> All mankind's unhappiness derives from one thing: his inability to know how to remain in repose in one room. <span style="color:#8c8c8c">&#10078;</span></p>
