--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -319,7 +319,7 @@
  }
  }]
  }</script><script type=application/ld+json>{"@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": {"@type": "EntryPoint", "url": "https://paulm.ph/Bible/Matthew-Chapter-2", "urlTemplate": "https://paulm.ph/Bible/Matthew-Chapter-2"}}</script>
-
+<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:1200px;height:100px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="5216551673"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 <footer class="footer" style="background:#3F3F3F"><div style="margin-left:16px; margin-right:16px;">
 <div style="background:#3F3F3F; border-bottom: 1px solid #FBFCFC; display:table; clear:both; padding:0; width:100%;">
 <h4 style="-webkit-margin-before:25px; -webkit-margin-after:25px; margin-left:10%; color:#e84118; font-size:35px"><b><i>Tag<span style="color:#f2f2f2">Lish</span></i></b></h4></div><br>
