--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -113,7 +113,7 @@
 <script> function openNav() { document.getElementById("mySidenav").style.width = "100%"; } function closeNav() { document.getElementById("mySidenav").style.width = "0"; } </script>
 
 	<div class="row pad"><div class="main" style="overflow:hidden">
-		<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+		<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br>
     <nav><a href="../index.html" class="bhov" style="margin-left:3%; font-size:18px; text-decoration: none; display:inline-block">Home</a>
     <a href="../Christianity.html" class="bhov" style="margin-left:5px; font-size:18px; text-decoration:none; display:inline-block">&#10141;&nbsp;&nbsp;Christianity</a>
     <a href="../Bible.html" class="bhov" style="margin-left:5px; font-size:18px; text-decoration:none; display:inline-block">&#10141;&nbsp;&nbsp;Quotes</a>
