--- a/pcso-lotto-and-games/Christian-Quotes-copy.html
+++ b/pcso-lotto-and-games/Christian-Quotes-copy.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>How to Franchise Jollibee in the Philipines | Paano mag-Franchise - TagLish</title>
+<title>.</title>
 <meta name="robots" content="noindex, nofollow"/>
 <meta name="theme-color" content="#e84118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
