--- a/pcso-lotto-and-games/Christian-Quotes-about-Love.html
+++ b/pcso-lotto-and-games/Christian-Quotes-about-Love.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>How to Franchise Jollibee in the Philipines | Paano mag-Franchise - TagLish</title>
-<meta name="robots" content="index, follow"/>
+<title>..</title>
+<meta name="robots" content="noindex, nofollow"/>
 <meta name="theme-color" content="#4B8EFA">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Matthew 3 | Book of Matthew | The Gospel according to Matthew" /> 
@@ -260,19 +260,19 @@
 <!-- Related Articles --> <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Related Articles</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
 <!-- Article 1 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads hide-s" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 <!-- Article 3 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 4 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads hide-s" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 <!-- Article 6 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 7 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 8 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
+<!-- Google Ads --> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle ads hide-s" style="display:block" data-ad-format="fluid" data-ad-layout-key="-86+1k-kd+d+1os" data-ad-client="ca-pub-8489405167836126" data-ad-slot="8037854812"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script>
 <!-- Article 10 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 11 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
