--- a/pcso-lotto-and-games/testing.html
+++ b/pcso-lotto-and-games/testing.html
@@ -234,8 +234,9 @@
     <br><div class="topnav share" style="width:100%; z-index:4; max-width:450px;"><a style="color:#626567;">I-share sa</a>
     <a href="https://facebook.com/sharer.php?u=https://yup.ph" class="fbb" style="width:33.33333%; margin-right:5px; border-radius:20px; display:inline-block; border:1px solid #ccc; font-size:13px; text-align:center"><b>facebook</b></a>
     <a href="https://twitter.com/share?url=https://yup.ph&amp;text=How%20to%20Franchise%20Jollibee%20in%20the%20Philippines&amp;hashtags=JollibeeFranchising" class="fbb" style="border-radius:20px; width:33.33333%; border:1px solid #ccc; font-size:13px; text-align:center"><b>twitter</b></a></div><br><br>
-<!-- Google Ads --> <div style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
-    
+<!-- Google Ads --> <div class="hide-s" style="overflow:hidden; text-align:center"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:block; text-align:center;" data-ad-layout="in-article" data-ad-format="fluid" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1083447155"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+    <!-- Google Ads --> <div class="hide-m hide-l" style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+		
 <!-- Recommended --> <br><p><a class="ff" style="padding:8px; padding-top:11px; background:#f2f2f2; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Recommended</b></a></p> <div class="row" style="text-align:center"><br>
 <!-- Article 1 --><div class="half"><article class="card"><a href="" ><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >Christian Quotes about Life</a></p></header></article><br></div>
@@ -303,6 +304,7 @@
  }
  }]
  }</script><script type=application/ld+json>{"@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": {"@type": "EntryPoint", "url": "https://paulm.ph/Bible/Matthew-Chapter-2", "urlTemplate": "https://paulm.ph/Bible/Matthew-Chapter-2"}}</script>
+	<div class="hide-s hide-m" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block; width:100%;max-width:1200px;height:100px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="5216551673"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>	
 <footer class="footer" style="background:#3F3F3F"><div style="margin-left:16px; margin-right:16px;">
 <div style="background:#3F3F3F; border-bottom: 1px solid #FBFCFC; display:table; clear:both; padding:0; width:100%;">
 <h4 style="-webkit-margin-before:25px; -webkit-margin-after:25px; margin-left:10%; color:#e84118; font-size:35px"><b><i>Tag<span style="color:#f2f2f2">Lish</span></i></b></h4></div><br>
