Update and rename How-to-Play-Ultra-Lotto-6-58.html to a.html

--- a/pcso-lotto-and-games/a.html
+++ b/pcso-lotto-and-games/a.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="utf-8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-<title>How to Franchise Jollibee in the Philipines | Paano mag-Franchise - TagLish</title>
-<meta name="robots" content="index, follow"/>
-<meta name="theme-color" content="#2d89ef">
+<title>..</title>
+<meta name="robots" content="noindex, nofollow"/>
+<meta name="theme-color" content="#e84118">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Matthew 3 | Book of Matthew | The Gospel according to Matthew" /> 
 <meta name="keywords" content="franchise Jollibee, Jollibee franchise, Jollibee franchising, franchising, Jollibee, franchise, how to franchise, paano mag-franchise" /> 
