--- a/pcso-lotto-and-games/a.html
+++ b/pcso-lotto-and-games/a.html
@@ -115,7 +115,7 @@
     
     <main> <!-- How To Play Ultra Lotto 6/58 -->
     
-    <p class="htitle"><strong>PCSO Ultra Lotto 6/58</strong></p><br>
+    <p class="htitle"><strong>How to Play PCSO Ultra Lotto 6/58</strong></p><br>
 	<p class="date"><b>March 12, 2018</b></p><br>
 	<img src="../../images/happiness-honors-the-king.jpg" alt="How to Franchise McDonald's in the Philippines" style="width:100%">
 	
