--- a/pcso-lotto-and-games/a.html
+++ b/pcso-lotto-and-games/a.html
@@ -225,12 +225,12 @@
 <!-- Related Articles --> <div style="background:#f2f2f2;"><p class="ff" style="padding:5px; padding-top:8px; font-size:13px; text-transform:uppercase; text-align:center; letter-spacing:7px"><b>&nbsp;Related Articles</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
 <!-- Article 1 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+<!-- Google Ads --> <div style="overflow:hidden; text-align:center; margin-bottom:21px"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 <!-- Article 3 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 4 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<!-- Google Ads --> <div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
+<!-- Google Ads --> <div style="overflow:hidden; text-align:center; margin-bottom:21px"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div>
 <!-- Article 6 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 7 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
@@ -276,7 +276,7 @@
  }
  }]
  }</script><script type=application/ld+json>{"@context": "http://schema.org", "@type": "ViewAction", "name": "", "target": {"@type": "EntryPoint", "url": "https://paulm.ph/Bible/Matthew-Chapter-2", "urlTemplate": "https://paulm.ph/Bible/Matthew-Chapter-2"}}</script>
-<div class="hide-s hide-m" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block; width:100%;max-width:1200px;height:100px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="5216551673"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+<div class="hide-s hide-m" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block; width:100%;max-width:1200px;height:100px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="5216551673"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script><br></div>
 <footer class="footer" style="background:#3F3F3F"><div style="margin-left:16px; margin-right:16px;">
 <div style="background:#3F3F3F; border-bottom: 1px solid #FBFCFC; display:table; clear:both; padding:0; width:100%;">
 <h4 style="-webkit-margin-before:25px; -webkit-margin-after:25px; margin-left:10%; color:#e84118; font-size:35px"><b><i>Tag<span style="color:#f2f2f2">Lish</span></i></b></h4></div><br>
