--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -78,7 +78,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 </style></head><body>
 
 	<div class="TopAd" style="width:100%; background:#000; text-align:center;">
-	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block; width:100%" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script>
 	</div>
 	
 <!-- Desktop Navigation --> <div class="navi hide-s" style="z-index:5; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 5px 5px 0 rgba(0,0,0,0.16); background-color: #000; overflow: auto; white-space: nowrap; text-transform:uppercase; border-bottom:5px solid #ffcc00">
