--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -84,7 +84,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 </script>
 </head><body>
 	
-	<div class="hide-m hide-l" style="text-align:center; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:100%;height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1134589409"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
+	<div class="hide-m hide-l" style="text-align:center; padding:2px; width:100%"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1134589409"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>
 	
 <!-- Desktop Navigation --> <div class="navi hide-s" style="z-index:5; position:-webkit-sticky; position:sticky; top:0; box-shadow:0 5px 5px 0 rgba(0,0,0,0.16); background-color: #000; overflow: auto; white-space: nowrap; text-transform:uppercase; border-bottom:5px solid #ffcc00">
 	<nav><a href="index.html" style="display:inline-block; font-family:mFont; font-size:45px; border:4.5px solid #fff; padding-top:10px; padding-bottom:0; padding-left:6px; padding-right:6px; color:#ffcc00; margin-left:15%; vertical-align:middle; margin-top:8px; margin-bottom:8px; letter-spacing:2px;"><b>REAL<span style="color:#fff;">TALK</span></b></a>
@@ -120,7 +120,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 <script> var prevScrollpos = window.pageYOffset; window.onscroll = function() {var currentScrollPos = window.pageYOffset; if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0";} else {document.getElementById("navbar").style.top = "-72px";} prevScrollpos = currentScrollPos;} </script>
 
 	<div class="row pad"><div class="main" style="overflow:hidden">
-	<!-- Google Ads --><br><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br>	
+	<!-- Google Ads --><br class="hide-s"><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br>	
     <br class="hide-s"><div class="breadcrumb" style="list-style: none; overflow: auto; white-space: nowrap; padding-left:5%">
     <nav><li><a href="#">Home</a></li>
     <li><a href="#">Resources</a></li>
