--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -119,7 +119,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 
 	<div class="row pad"><div class="main" style="overflow:hidden">
 	<!-- Google Ads --><br class="hide-s"><div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">	
-    <br class="hide-s"><div class="breadcrumb" style="list-style: none; overflow: auto; white-space: nowrap; padding-left:5%">
+   <br><div class="breadcrumb" style="list-style: none; overflow: auto; white-space: nowrap; padding-left:5%">
     <nav><li><a href="#">Home</a></li>
     <li><a href="#">Resources</a></li>
     <li><a href="#">Food</a></li>
