--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -217,7 +217,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
     
     </main></div><aside class="side"><br><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
     
-<!-- Related Articles --> <div style="background:#f2f2f2; width:100%;"><p class="ff" style="padding:5px; padding-top:8px; font-size:16px; text-transform:uppercase; text-align:center; letter-spacing:6px"><b>&nbsp;Related Articles</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
+<!-- Related Articles --> <div style="background:#f2f2f2; width:100%;"><p class="ff" style="padding:5px; padding-top:8px; font-size:16px; text-transform:uppercase; text-align:center; letter-spacing:6px"><b>&nbsp;You Might Also Like</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
 <!-- Article 1 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 3 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
