--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -96,8 +96,8 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<a href="../Resources.html" class="hov hide-s" style="margin-right:60px; border:3px solid white;"><b>Resources</b></a>
 	</nav></div>
 	
-<div class="hide-m hide-l" id="navbar" style="z-index:5; height:75px; background:#000; border-bottom:3px solid #ffcc00; padding-top:14px; box-shadow:0 5px 5px 0 rgba(0,0,0,0.16)">
-<a href="index.html" style="display:inline-block; font-family:mFont; font-size:25px; border:3px solid #fff; padding-top:7px; padding-left:6px; padding-right:6px; color:#ffcc00; margin-left:20px; vertical-align:middle; margin-top:4px; letter-spacing:2px;"><b>REAL<span style="color:#fff;">TALK</span></b></a>
+<div class="hide-m hide-l" id="navbar" style="z-index:5; height:75px; background:#fff; border-bottom:3px solid #ffcc00; padding-top:14px; box-shadow:0 5px 5px 0 rgba(0,0,0,0.16)">
+<a href="index.html" style="display:inline-block; font-family:mFont; font-size:25px; border:3px solid #fff; padding-top:7px; padding-left:6px; padding-right:6px; color:#ffcc00; margin-left:20px; vertical-align:middle; margin-top:4px; letter-spacing:2px;"><b>REAL<span style="color:#000;">TALK</span></b></a>
 <a href="javascript:void(0)" style="display:inline-block; padding-top:0; padding-left:20px; padding-right:20px; float:right; font-size:33px; color:#fff; text-decoration:none;" onclick="openNav()"><b>&#9776;</b></a></div>
 	
 <!-- Mobile Navigation --> <div id="myNav" class="myNav" style="height: 0%; width: 100%; position: fixed; z-index: 5; top: 0; left: 0; background:#000000; overflow-y: hidden; transition: 0.5s;">
