--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -96,7 +96,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<a href="../Resources.html" class="hov hide-s" style="margin-right:60px; border:3px solid white;"><b>Resources</b></a>
 	</nav></div>
 	
-<div class="hide-m hide-l" id="navbar" style="z-index:5; height:65px; background:#fff; padding-top:14px;">
+<div class="hide-m hide-l" id="navbar" style="z-index:5; height:65px; box-shadow:0 3px 5px 0 rgba(0,0,0,0.16); background:#fff; padding-top:14px;">
 <a href="index.html" style="display:inline-block; font-family:mFont; font-size:25px; padding-top:0; padding-left:6px; padding-right:6px; color:#626567; margin-left:20px; vertical-align:middle; margin-top:4px; letter-spacing:2px;"><b>Real<span style="color:#000;">Talk</span></b></a>
 <a href="javascript:void(0)" style="display:inline-block; padding-top:0; padding-left:20px; padding-right:20px; float:right; font-size:23px; color:#626567; text-decoration:none;" onclick="openNav()"><b>&#9776;</b></a></div>
 	
