--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -183,6 +183,15 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<h2>History of Adobo</h2>
 	<p>The cooking method is indigenous to the Philippines. Early Filipinos cooked their food normally by roasting, steaming or boiling methods. To keep it fresh longer, food was often cooked by immersion in vinegar and salt. Thus, it is very likely that Filipinos could have been cooking meat in vinegar as a means of preservation. This process dates back to the Pre-Hispanic Period and was used for pork and chicken.</p>
 	<p>When the Spanish Empire colonized the Philippines in the late 16th century and early 17th century, they encountered this cooking process. It was first recorded in the dictionary Vocabulario de la Lengua Tagala (1613) compiled by the Spanish Franciscan missionary Pedro de San Buenaventura. He referred to it as adobo de los naturales ("adobo of the native peoples").[6][7][8] Dishes prepared in this manner eventually came to be known by this name, with the original term for the dish now lost to history.</p>
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:250px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3891580843"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>	
 	<p>The Spanish also applied the term adobo to any native dish that was marinated before consumption. In the 1794 edition of Vocabulario de la lengua Tagala, it was applied to quilauìn (kinilaw) a related but different dish which also primarily uses vinegar.[11] In Vocabulario de la lengua Bisaya (1711), the term guinamus (verb form: gamus) was used to refer to any kind of marinades (adobo), from fish to pork. In modern Cebuano, guinamos refers to an entirely different dish - bagoong.</p>
 	
 	<h3>Description</h3>
