--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -183,7 +183,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<h2>History of Adobo</h2>
 	<p>The cooking method is indigenous to the Philippines. Early Filipinos cooked their food normally by roasting, steaming or boiling methods. To keep it fresh longer, food was often cooked by immersion in vinegar and salt. Thus, it is very likely that Filipinos could have been cooking meat in vinegar as a means of preservation. This process dates back to the Pre-Hispanic Period and was used for pork and chicken.</p>
 	<p>When the Spanish Empire colonized the Philippines in the late 16th century and early 17th century, they encountered this cooking process. It was first recorded in the dictionary Vocabulario de la Lengua Tagala (1613) compiled by the Spanish Franciscan missionary Pedro de San Buenaventura. He referred to it as adobo de los naturales ("adobo of the native peoples").[6][7][8] Dishes prepared in this manner eventually came to be known by this name, with the original term for the dish now lost to history.</p>
-	<div style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div style="text-align:center; margin-top:30px; margin-bottom:30px;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Xs -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:300px;height:250px"
