--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -197,6 +197,15 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<h3>Description</h3>
 	<p>While the adobo dish and cooking process in Filipino cuisine and the general description of adobo in Spanish cuisine share similar characteristics, they refer to different things with different cultural roots. While the Philippine adobo can be considered adobo in the Spanish sense—a marinated dish—the Philippine usage is much more specific to a cooking process (rather than a specific recipe) and is not restricted to meat.[13] Typically, pork or chicken, or a combination of both, is slowly cooked in vinegar, crushed garlic, bay leaves, black peppercorns, and soy sauce. It is served with white rice.[6][14][15] It was traditionally cooked in small clay pots (palayok or kulon); but in modern times, metal pots or woks (kawali) are used instead.</p>
 	<p>There are numerous variants of the adobo recipe in the Philippines.[9] The most basic ingredient of adobo is vinegar, which is usually coconut vinegar, rice vinegar, or cane vinegar (although sometimes white wine or cider vinegar can also be used). Almost every ingredient can be changed according to personal preference. Even people in the same household can cook adobo in significantly different ways.[13][15] A rarer version without soy sauce is known as adobong puti ("white adobo" or "blond adobo"), which uses salt instead, to contrast it with adobong itim ("black adobo"), the more prevalent versions with soy sauce.[17][18] Adobong puti is often regarded as the closest to the original version of the Pre-Hispanic adobo.[13][19] It is similar to another dish known as pinatisan, where patis (fish sauce) is used instead of vinegar.</p>
+	<div style="text-align:center; margin-top:50px; margin-bottom:30px;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><a style="color:#a6a6a6">advertisement</a></div>	
 	<p>The proportion (or even the presence) of ingredients like soy sauce, bay leaves, garlic, or black pepper can vary. Other ingredients can sometimes be used; like siling labuyo, bird's eye chili, jalapeño pepper, red bell pepper, olive oil, onions, brown sugar, potatoes, or pineapple. It may also be further browned in the oven, pan-fried, deep-fried, or even grilled to get crisped edges.</p>
 	<p>There are also regional variations. In southern Luzon (Bicol region), and Muslim Zamboanga, for example, it is common to see adobo cooked with coconut milk (known as adobo sa gatâ). In Cavite, mashed pork liver is added. In Laguna, turmeric was added, giving the dish a distinct yellowish color (known as adobong dilaw, "yellow adobo").</p>
 	<p>Adobo has also become a favorite of Filipino-based Fusion cuisine, with avant garde cooks coming up with variants such as "Japanese-style" pork adobo.</p>
