--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -208,8 +208,26 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 </script><a style="color:#a6a6a6">advertisement</a></div>	
 	<p>The proportion (or even the presence) of ingredients like soy sauce, bay leaves, garlic, or black pepper can vary. Other ingredients can sometimes be used; like siling labuyo, bird's eye chili, jalapeño pepper, red bell pepper, olive oil, onions, brown sugar, potatoes, or pineapple. It may also be further browned in the oven, pan-fried, deep-fried, or even grilled to get crisped edges.</p>
 	<p>There are also regional variations. In southern Luzon (Bicol region), and Muslim Zamboanga, for example, it is common to see adobo cooked with coconut milk (known as adobo sa gatâ). In Cavite, mashed pork liver is added. In Laguna, turmeric was added, giving the dish a distinct yellowish color (known as adobong dilaw, "yellow adobo").</p>
+	<div style="text-align:center; margin-top:50px; margin-bottom:30px;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><a style="color:#a6a6a6">advertisement</a></div>	
 	<p>Adobo has also become a favorite of Filipino-based Fusion cuisine, with avant garde cooks coming up with variants such as "Japanese-style" pork adobo.</p>
 	<p>Based on the main ingredients, the most common adobo dishes are adobong manok, in which chicken is used, and adobong baboy, in which pork is used. Adobong baka (beef), along with Adobong manok (chicken), is more popular among Muslim Filipinos.[23] Other meat sources may also be used, such as adobong pugò (quail), adobong itik (duck), adobong kambing (goat).[13] There are also seafood variants which can include fish (adobong isda), catfish (adobong hito), shrimp (adobong hipon), and squid or cuttlefish (adobong pusit). It can even be used to cook vegetables and fruits,[16] like water spinach(adobong kangkong), bamboo shoots (adobong labong), eggplant (adobong talong), banana flowers (adobong pusô ng saging), and okra (adobong okra).</p>
+	<div style="text-align:center; margin-top:50px; margin-bottom:30px;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Xs -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:300px;height:250px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="3410087315"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script><a style="color:#a6a6a6">advertisement</a></div>	
 	<p>Even more exotic versions include adobong sawâ (snake),[26] adobong palakâ (frogs),[27] Kapampangan adobung kamaru (mole crickets),[13] and the adobong atay at balunbalunan (chicken liver and gizzard).</p>
 	<p>Adobo has been called the quintessential Philippine stew, served with rice both at daily meals and at feasts.[14] It is commonly packed for Filipino mountaineers and travelers because it keeps well without refrigeration. Its relatively long shelf-life is due to one of its primary ingredients, vinegar, which inhibits the growth of bacteria.</p>
 	<h3>Source:</h3> <p><a href="https://en.m.wikipedia.org/wiki/Philippine_adobo" style="color:#c8232c" rel="nofollow">Wikipedia.org</a></p>
