--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -191,7 +191,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
      data-ad-slot="3410087315"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><p style="color:#a6a6a6; padding:0; font-size:13px">advertisement</p></div>	
+</script><p style="color:#a6a6a6; padding:none; font-size:15px">advertisement</p></div>	
 	<p>The Spanish also applied the term adobo to any native dish that was marinated before consumption. In the 1794 edition of Vocabulario de la lengua Tagala, it was applied to quilauìn (kinilaw) a related but different dish which also primarily uses vinegar.[11] In Vocabulario de la lengua Bisaya (1711), the term guinamus (verb form: gamus) was used to refer to any kind of marinades (adobo), from fish to pork. In modern Cebuano, guinamos refers to an entirely different dish - bagoong.</p>
 	
 	<h3>Description</h3>
