--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -119,7 +119,16 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 <script> var prevScrollpos = window.pageYOffset; window.onscroll = function() {var currentScrollPos = window.pageYOffset; if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0";} else {document.getElementById("navbar").style.top = "-65px";} prevScrollpos = currentScrollPos;} </script>
 
 	<div class="row pad"><div class="main" style="overflow:hidden">
-	<!-- Google Ads --><br class="hide-s"><div class="ad" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">	
+	<!-- Google Ads -->
+	<div class="hide-m hide-l" style="text-align:center; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Top -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:400px;height:60px"
+     data-ad-client="ca-pub-8489405167836126"
+     data-ad-slot="2782389594"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script></div>	<br class="hide-s"><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">	
    <br><div class="breadcrumb" style="list-style: none; overflow: auto; white-space: nowrap; padding-left:5%">
     <nav><li><a href="#">Home</a></li>
     <li><a href="#">Resources</a></li>
