--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -120,7 +120,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 
 	<div class="row pad"><div class="main" style="overflow:hidden">
 	<!-- Google Ads -->
-	<div class="hide-m hide-l" style="text-align:center; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Top -->
 <ins class="adsbygoogle"
      style="display:inline-block;width:400px;height:60px"
