--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -214,7 +214,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
      data-ad-slot="3410087315"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><a style="color:#a6a6a6">advertisement</a></div>	
+</script><a style="color:#a6a6a6; display:block">advertisement</a></div>	
 	<p>The proportion (or even the presence) of ingredients like soy sauce, bay leaves, garlic, or black pepper can vary. Other ingredients can sometimes be used; like siling labuyo, bird's eye chili, jalapeño pepper, red bell pepper, olive oil, onions, brown sugar, potatoes, or pineapple. It may also be further browned in the oven, pan-fried, deep-fried, or even grilled to get crisped edges.</p>
 	<p>There are also regional variations. In southern Luzon (Bicol region), and Muslim Zamboanga, for example, it is common to see adobo cooked with coconut milk (known as adobo sa gatâ). In Cavite, mashed pork liver is added. In Laguna, turmeric was added, giving the dish a distinct yellowish color (known as adobong dilaw, "yellow adobo").</p>		
 	<p>Adobo has also become a favorite of Filipino-based Fusion cuisine, with avant garde cooks coming up with variants such as "Japanese-style" pork adobo.</p>
@@ -227,7 +227,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
      data-ad-slot="3410087315"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
-</script><a style="color:#a6a6a6">advertisement</a></div>	
+</script><a style="color:#a6a6a6; display:block">advertisement</a></div>	
 	<p>Even more exotic versions include adobong sawâ (snake),[26] adobong palakâ (frogs),[27] Kapampangan adobung kamaru (mole crickets),[13] and the adobong atay at balunbalunan (chicken liver and gizzard).</p>
 	<p>Adobo has been called the quintessential Philippine stew, served with rice both at daily meals and at feasts.[14] It is commonly packed for Filipino mountaineers and travelers because it keeps well without refrigeration. Its relatively long shelf-life is due to one of its primary ingredients, vinegar, which inhibits the growth of bacteria.</p>
 	<h3>Source:</h3> <p><a href="https://en.m.wikipedia.org/wiki/Philippine_adobo" style="color:#c8232c" rel="nofollow">Wikipedia.org</a></p>
@@ -251,7 +251,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 <!-- Article 6 --><div class="half"><article class="card"><a href="" ><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >Christian Quotes about Death</a></p></header></article></div>
     
-    </main></div><aside class="side"><br><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script></div><br>
+    </main></div><aside class="side"><br><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script><a style="color:#a6a6a6; display:block">advertisement</a></div><br>
     
 <!-- Related Articles --> <div style="background:#f2f2f2; width:100%;"><p class="ff" style="padding:5px; padding-top:8px; font-size:16px; text-transform:uppercase; text-align:center; letter-spacing:6px"><b>&nbsp;You Might Also Like</b></p></div><div class="row fcolor related" style="width:100%; max-width:450px; margin:auto"><br>
 <!-- Article 1 --><article class="card"><a href=""><img src="../../../images/happiness-honors-the-king.jpg" alt="Avatar"></a>
