--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -264,7 +264,7 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
 <!-- Article 12 --><article class="card"><a href=""><img src="../../../images/does-god-know-the-exact-day-i-will-die.jpg" alt="Avatar"></a>
     <header><p><a href="" >How to franchise Jollibee in the Philippines</a></p></header></article><br>
-<div style="overflow:hidden; margin-top:45px; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script><a style="color:#a6a6a6; display:block">advertisement</a></div><br></div></aside></div>
+<div style="overflow:hidden; margin-top:45px; margin-bottom:30px; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle" style="display:inline-block;width:336px;height:280px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="7065250191"></ins> <script> (adsbygoogle = window.adsbygoogle || []).push({}); </script><a style="color:#a6a6a6; display:block">advertisement</a></div></div></aside></div>
 	
 <script type=application/ld+json>{"@context": "http://schema.org", "@type": "WebSite", "name": "Paul Mamparo", "url": "https://paulm.ph/", "potentialAction": {"@type": "SearchAction", "target": "https://paulm.ph/?s={search_term_string}", "query-input": "required name=search_term_string"}}</script>
 <script type=application/ld+json>{
