--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -113,11 +113,11 @@ div.navi a {display: inline-block; color: white; text-align: center; padding: 14
 	<div class="row pad"><div class="main" style="overflow:hidden">
 	<!-- Google Ads -->
 	<div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<!-- Top -->
+<!-- Ad Bottom -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:100%; max-width:400px;height:60px"
+     style="display:inline-block;width:320px;height:50px"
      data-ad-client="ca-pub-8489405167836126"
-     data-ad-slot="2782389594"></ins>
+     data-ad-slot="4062277366"></ins>
 <script>
 (adsbygoogle = window.adsbygoogle || []).push({});
 </script></div>	<br class="hide-s"><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">	
