--- a/pcso-lotto-and-games/Philippine-Adobo.html
+++ b/pcso-lotto-and-games/Philippine-Adobo.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 <title>Glutathione Reviews | Capsule & injectable Gluta Reviews - RealTalk</title>
 <meta name="robots" content="noindex, nofollow"/>
-<meta name="theme-color" content="#f2f2f2">
+<meta name="theme-color" content="#e6e6e6">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Matthew 3 | Book of Matthew | The Gospel according to Matthew" /> 
 <meta name="keywords" content="franchise Jollibee, Jollibee franchise, Jollibee franchising, franchising, Jollibee, franchise, how to franchise, paano mag-franchise" /> 
