--- a/pcso-lotto-and-games/woff-font4.html
+++ b/pcso-lotto-and-games/woff-font4.html
@@ -143,7 +143,7 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
 <script>function openNav() {document.getElementById("myNav").style.height = "100%";} function closeNav() {document.getElementById("myNav").style.height = "0%";}</script>
 <script> var prevScrollpos = window.pageYOffset; window.onscroll = function() {var currentScrollPos = window.pageYOffset; if (prevScrollpos > currentScrollPos) {document.getElementById("navbar").style.top = "0";} else {document.getElementById("navbar").style.top = "-72px";} prevScrollpos = currentScrollPos;} </script>
 
-	<div class="row pad"><div class="main" style="overflow:hidden">
+	<div class="row pad" style="max-width:1200px; margin:auto;"><div class="main" style="overflow:hidden">
     <div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="4062277366"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>	
     <br class="hide-s"><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">
     
