--- a/pcso-lotto-and-games/woff-font4.html
+++ b/pcso-lotto-and-games/woff-font4.html
@@ -98,7 +98,7 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
 .APhoto{height:45px; width:45px; display:inline-block; float:left; border-radius:50%; margin-bottom:2px}
 .AAuthor{letter-spacing:.4px; font-size:14px;display:inline-block; -webkit-margin-before:8px; -webkit-margin-after:0; font-family:TFont; float:left; line-height:1.5; padding:5px 16px 0 10px; color:#34495E;}
 * {box-sizing: border-box;} body, a, li{margin:0; color:#243342}
-@font-face {font-family:PFont; src: url(../../poppins-v5-latin-300.woff);}
+@font-face {font-family:PFont; src: url(../../poppins-v5-latin-regular.woff);}
 @font-face {font-family:TFont; src: url(../../poppins-v5-latin-700.woff);}
 @media (max-width:600px){.hide-s {display:none!important}}
 @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important} .half{width:49.99999%!important} .date{font-size:13px}}
