--- a/pcso-lotto-and-games/woff-font4.html
+++ b/pcso-lotto-and-games/woff-font4.html
@@ -139,7 +139,7 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
 
 	<div class="row pad page" style="max-width:1600px;"><div class="main" style="overflow:hidden">
     <div class="hide-m hide-l" style="text-align:center; overflow:hidden; width:100%;"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:inline-block;width:320px;height:50px" data-ad-client="ca-pub-8489405167836126" data-ad-slot="4062277366"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div>	
-    <br class="hide-s"><div class="hide-s" style="text-align:center"><script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script><ins class="adsbygoogle" style="display:block;width:100%;" data-ad-client="ca-pub-8489405167836126" data-ad-slot="1163424893" data-ad-format="auto"></ins><script>(adsbygoogle = window.adsbygoogle || []).push({});</script></div><br class="hide-s">
+    <br class="hide-s"><div class="hide-s" style="text-align:center"></div><br class="hide-s">
     
     <main> <!-- How To Play Ultra Lotto 6/58 -->
     
