--- a/pcso-lotto-and-games/woff-font4.html
+++ b/pcso-lotto-and-games/woff-font4.html
@@ -254,7 +254,7 @@ h1,h2,h3,h4,h5, p{padding:0 20px 0 20px} li{padding-right:20px;}
     </main></div><aside class="side sidepad"><br><br class="hide-s"><div style="overflow:hidden; text-align:center;"> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <!-- Long Ad -->
 <ins class="adsbygoogle"
-     style="display:inline-block;width:160px;height:600px"
+     style="display:inline-block;width:160px;height:600px;border:1px solid #ccc"
      data-ad-client="ca-pub-8489405167836126"
      data-ad-slot="4935003461"></ins>
 <script>
