--- a/pcso-lotto-and-games/Grand-lotto-6-55.html
+++ b/pcso-lotto-and-games/Grand-lotto-6-55.html
@@ -95,7 +95,7 @@ enable_page_level_ads: true
 </script>
 	
 <style>
-* {box-sizing: border-box;} body {margin:0;}  p, a, li, table {font-family:Arial;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
+* {box-sizing: border-box;} body {margin:0;}  p, a, li, table {font-family:Tahoma, Geneva, sans-serif;} @font-face {font-family:mFont; src: url(../Lotto-Info.woff);} h1, h2, h3, h4, .topnav a, .sidenav a, .ff {font-family:mFont;}
 h1{font-size:24px} h2{font-size:24px} h3{font-size:24px} h4{font-size:20px} p, li{font-size:17px; line-height:1.5; letter-spacing:.2px} .ftext{font-size:28px} .text-m{font-size:15px} .text-l {font-size:18px}
 .show {display:block!important} @media (max-width:600px){.hide-s{display:none!important}} @media (max-width:992px) and (min-width:601px){.hide-m{display:none!important}} @media (min-width:993px){.hide-l{display:none!important}}
 .topnav a {float:left; display:block; color:#ECEEF1; padding:11px; text-decoration:none; vertical-align:middle;} .yf, p, li, table {color:#404040;} .hov:hover {border-bottom:3px solid white;} .hide{display:none!important;}
