--- a/pcso-lotto-and-games/bago-woff.html
+++ b/pcso-lotto-and-games/bago-woff.html
@@ -25,7 +25,7 @@ p,.psize{letter-spacing:.5px;font-size:17px;line-height:1.6;padding:8px 16px;col
 @media (max-width:600px){p{-webkit-text-stroke:.3px #000;}h1{line-height:1.1;padding:0px 5px;margin-top:-8px;padding:10px 16px}}.HTitleBox{height:}li{padding:2px 20px 2px 0}#navbar a{color:white;font-size:20px}#navbar{padding:5px 25px 0 10px;z-index:4;height:60px;top:-80px;}
 @media (max-width:900px)and(min-width:601px){.HTitleBox{padding-left:16px}h1{padding:30px 30px 5px 30px}}
 @media (min-width:601px){h1{padding:40px 0}}nav{width:100%}.sidenav a{display:block;padding:10px 0 10px 12%;font-size:16px;color:#404040}
-@media (min-width:901px){#navbar{height:70px;top:-70px;}p{font-size:19px}h2,h3,h4{font-weight:bold;letter-spacing:-1px}}
+@media (min-width:901px){#navbar{height:70px;top:-70px;}p{font-size:19px}h2,h3,h4{font-weight:bold;letter-spacing:-.5px;font-size:33px}}
 .box a{font-size:19px;padding:15px 16px;color:#8E24AA;display:block;border-top:1px solid #ccc} strong{font-weight:300}
 .text b{font-family:TFont;letter-spacing:-.3px;padding:0;font-size:17.5px}
 .Ingredients{border-bottom:dotted 1px #626567; padding:30px 16px}.Directions{padding:12px 16px}.Recipe{padding:0 20px}.Recipe h3{padding:0;border-bottom:2px solid #1a1a1a}.RP{display:inline-block;font-size:14px;float:left;width:60%;border-bottom:dotted 1px #626567;padding: 3px 0 3px 0}.RP b,.unit b, .RP{-webkit-text-stroke:0;font-size:14px;letter-spacing:.8px}
